--- a/admin/app/views/spree/admin/promotions/_form.html.erb
+++ b/admin/app/views/spree/admin/promotions/_form.html.erb
@@ -23,7 +23,7 @@
     <div class="card">
       <div class="card-header">
         <h5 class="card-title">
-          <%= Spree.t(:promotion_kind) %>
+          <%= Spree.t(:kind) %>
         </h5>
       </div>
       <div class="card-body">
