--- a/admin/app/views/spree/admin/promotion_actions/new.html.erb
+++ b/admin/app/views/spree/admin/promotion_actions/new.html.erb
@@ -15,10 +15,10 @@
         <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @promotion_action } %>
         <% if @promotion_action.type.nil? %>
           <ul class="list-group">
-            <% allowed_action_types.each do |action_type| %>
+            <% options_for_promotion_action_types(@promotion).each do |action_type| %>
               <% key = action_type.to_s.demodulize.underscore %>
-              <li class="list-group-item p-0">
-                <%= link_to spree.new_admin_promotion_action_path(@promotion, promotion_action: { type: action_type }), class: 'd-flex align-items-top w-100 p-3 hover-light', data: { turbo_prefetch: false } do %>
+              <li class="list-group-item p-0 overflow-hidden">
+                <%= link_to spree.new_admin_promotion_action_path(@promotion, promotion_action: { type: action_type }), class: 'd-flex align-items-top w-100 py-2 px-3 hover-light', data: { turbo_prefetch: false } do %>
                   <%= radio_button_tag :type, action_type, checked: @promotion_action.type == action_type %>
                   <div class="ml-3">
                     <h6><%= Spree.t("promotion_action_types.#{key}.name") %></h6>
