--- a/admin/app/views/spree/admin/promotions/_actions.html.erb
+++ b/admin/app/views/spree/admin/promotions/_actions.html.erb
@@ -11,7 +11,7 @@
   <div class="card-body pb-0">
     <% if @promotion.promotion_actions.empty? %>
       <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
-        <%= Spree.t(:no_resource_found, resource: Spree.t(:promotion_actions)) %>
+        <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::PromotionAction)) %>
         <span data-toggle="modal" data-target="#modal">
           <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_action_path(@promotion), class: 'btn btn-light btn-sm ml-3', data: { turbo_frame: 'dialog_modal' } %>
         </span>
