--- a/admin/app/views/spree/admin/promotions/_status.html.erb
+++ b/admin/app/views/spree/admin/promotions/_status.html.erb
@@ -1,13 +1,16 @@
 <% if promotion.active? %>
   <span class="badge badge-success">
+    <%= icon('check', class: 'mr-1') %>
     <%= Spree.t(:active) %>
   </span>
-<% elsif promotion.inactive? %>
-  <span class="badge badge-light">
-    <%= Spree.t(:inactive) %>
+<% elsif promotion.expired? %>
+  <span class="badge badge-danger">
+    <%= icon('clock-x', class: 'mr-1') %>
+    <%= Spree.t(:expired) %>
   </span>
 <% else %>
-  <span class="badge badge-danger">
-    <%= Spree.t(:expired) %>
+  <span class="badge badge-light">
+    <%= icon('clock-pause', class: 'mr-1') %>
+    <%= Spree.t(:inactive) %>
   </span>
 <% end %>
