--- a/admin/app/views/spree/admin/promotion_actions/_promotion_action.html.erb
+++ b/admin/app/views/spree/admin/promotion_actions/_promotion_action.html.erb
@@ -24,6 +24,20 @@
         <h6><%= Spree.t(:calculator) %>: <%= promotion_action.calculator.description %></h6>
         <%= render 'spree/admin/shared/preferences', object: promotion_action.calculator %>
       <% end %>
+
+      <% if promotion_action.respond_to?(:promotion_action_line_items) %>
+        <h6><%= Spree.t(:line_items) %></h6>
+        <ul class="list-group">
+          <% promotion_action.promotion_action_line_items.each do |line_item| %>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <%= link_to line_item.variant.descriptive_name, spree.edit_admin_product_variant_path(line_item.variant.product, line_item.variant) %>
+              <span>
+                <%= Spree.t(:quantity) %>: <%= line_item.quantity %>
+              </span>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
     </div>
   </div>
 <% end %>
