Admin promotions - translations and spec fixes

--- a/admin/app/views/spree/admin/promotions/form/_kind.html.erb
+++ b/admin/app/views/spree/admin/promotions/form/_kind.html.erb
@@ -49,7 +49,7 @@
 
 <div class="mt-4 custom-control custom-radio">
   <%= f.radio_button :kind, :automatic, data: { toggle: :collapse, target: '#coupon-code' }, class: 'custom-control-input' %>
-  <%= f.label :kind_automatic, Spree.t(:automatic), class: 'custom-control-label' %>
+  <%= f.label :kind_automatic, Spree.t(:automatic_promotion), class: 'custom-control-label' %>
 
   <p class="form-text text-muted mt-2 mb-0">
     This promotion will be automatically applied to all eligible orders.
