--- a/admin/app/views/spree/admin/users/_details.html.erb
+++ b/admin/app/views/spree/admin/users/_details.html.erb
@@ -31,6 +31,14 @@
           <%= active_badge(@user.accepts_email_marketing?) %>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
+          Roles
+          <span>
+            <% @user.spree_roles.each do |role| %>
+              <span class="tag small"><%= role.name %></span>
+            <% end %>
+          </span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
           Tags
           <span>
             <% @user.tag_list.each do |tag| %>
