--- a/admin/app/views/spree/admin/shared/_modal.html.erb
+++ b/admin/app/views/spree/admin/shared/_modal.html.erb
@@ -6,7 +6,7 @@
           <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t(:loading) %>...</h5>
           <button type="button" class="btn-close" data-dismiss="modal" aria-label="<%= Spree.t(:close) %>" />
         </div>
-        <div class="modal-body text-center" style="min-height: 200px">
+        <div class="modal-body text-center">
           <div class="spinner-border text-light mx-auto my-5" role="status">
             <span class="sr-only"><%= Spree.t(:loading) %>...</span>
           </div>
