--- a/admin/app/views/spree/admin/promotion_actions/new.html.erb
+++ b/admin/app/views/spree/admin/promotion_actions/new.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag :dialog_modal do %>
   <%= form_with model: @promotion_action, url: spree.admin_promotion_actions_path(@promotion), method: :post, scope: :promotion_action do |f| %>
-    <div class="modal-content" data-controller="search-picker">
+    <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">
           <% if @promotion_action.type.nil? %>
