Added `apree_stripe` to sandbiox app and improved payment method list in store settings

--- a/admin/app/views/spree/admin/payment_methods/index.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/index.html.erb
@@ -40,6 +40,6 @@
 <% unless defined?(SpreeGateway) %>
   <div class="text-muted text-center p-5 d-flex align-items-center justify-content-center">
     More payment methods can be added by installing
-    <%= external_link_to 'Spree Gateway gem', 'https://github.com/spree/spree_gateway', class: 'btn btn-link ml-1' %>
+    <%= external_link_to 'Spree Gateway gem', 'https://github.com/spree/spree_gateway', class: 'btn btn-link btn-sm ml-1' %>
   </div>
 <% end %>
