--- a/admin/app/views/spree/admin/payment_methods/_payment_method.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/_payment_method.html.erb
@@ -4,17 +4,19 @@
   </td>
   <td class="cursor-pointer w-55 text-wrap" data-action="click->row-link#openLink">
     <div class="d-flex align-items-center">
-      <% if payment_method_icon_tag(payment_method.payment_icon_name).present? %>
-        <%= payment_method_icon_tag(payment_method.payment_icon_name, height: 60, class: 'with-tip', title: payment_method.name) %>
-      <% else %>
-        <%= payment_method_icon_tag('credit-card', height: 60, class: 'with-tip', title: payment_method.name) %>
-      <% end %>
+      <div class="bg-light rounded" style="width: 95px; height: 60px;">
+        <% if payment_method_icon_tag(payment_method.payment_icon_name).present? %>
+          <%= payment_method_icon_tag(payment_method.payment_icon_name, height: 60, class: 'with-tip', title: payment_method.name) %>
+        <% end %>
+      </div>
 
-      <% if payment_method.try(:description_partial_name) %>
-        <div class="mx-3">
+      <div class="mx-3">
+        <% if payment_method.try(:description_partial_name) %>
           <%= render "spree/admin/payment_methods/descriptions/#{payment_method.description_partial_name}", payment_method: payment_method %>
-        </div>
-      <% end %>
+        <% else %>
+          <%= payment_method.name %>
+        <% end %>
+      </div>
     </div>
   </td>
   <td class="w-20">
