Updated customization guides

--- a/admin/app/views/spree/admin/shared/_user_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/_user_dropdown.html.erb
@@ -27,7 +27,7 @@
 
       <div class="dropdown-divider"></div>
 
-      <%= link_to_with_icon 'book', 'Help center', 'https://spreecommerce.org/docs', class: 'dropdown-item', target: '_blank' %>
+      <%= link_to_with_icon 'book', 'Help center', 'https://spreecommerce.org/docs/user', class: 'dropdown-item', target: '_blank' %>
       <%= link_to_with_icon 'message-circle', 'Contact us', 'https://spreecommerce.org/contact/', class: 'dropdown-item', target: '_blank' %>
       <div class="dropdown-divider"></div>
 
