--- a/admin/app/views/spree/admin/users/_filters.html.erb
+++ b/admin/app/views/spree/admin/users/_filters.html.erb
@@ -60,7 +60,7 @@
         <div class="form-group">
           <%= f.label :spree_roles_name_in, Spree.t(:roles) %>
           <%= tom_select_tag "q[spree_roles_name_in]",
-          active_option: params[:q][:spree_roles_name_in],
+          active_option: params.dig(:q, :spree_roles_name_in),
           options: user_roles_json_array,
           multiple: true,
           value_field: :name,
