Feature/filter by role (#12527)
* allow filtering by spree_roles

* clean up debug

* remove accidental whitespace

* more tidying

* undo editor's auto change to methods not changed for this feature

* whiterspace

* Update admin/app/views/spree/admin/users/_filters.html.erb

---------

Co-authored-by: Damian Legawiec <damian@sparksolutions.co>

--- a/admin/app/views/spree/admin/users/_filters.html.erb
+++ b/admin/app/views/spree/admin/users/_filters.html.erb
@@ -56,6 +56,20 @@
                    { class: "custom-select", data: { filters_target: :input } } %>
         </div>
       </div>
+      <div class="col-lg-3">
+        <div class="form-group">
+          <%= f.label :spree_roles_name_in, Spree.t(:roles) %>
+          <%= tom_select_tag "q[spree_roles_name_in]",
+          active_option: params.dig(:q, :spree_roles_name_in),
+          options: user_roles_json_array,
+          multiple: true,
+          value_field: :name,
+          select_class: "w-100",
+          select_data: {
+            filters_target: "input",
+          } %>
+        </div>  
+      </div>
     </div>
     <div class="form-actions">
       <%= turbo_save_button_tag Spree.t(:filter_results) do %>
