--- a/admin/app/views/spree/admin/stores/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_basic.html.erb
@@ -110,5 +110,46 @@
     </div>
   </div>
 
-  <%= render 'spree/admin/stores/form/custom', f: f %>
+  <div class="col-lg-6">
+    <div class="card mb-4">
+      <div class="card-header">
+        <h5 class="card-title"><%= Spree.t(:digital_assets) %></h5>
+      </div>
+      <div class="card-body">
+        <p class="text-muted">
+          Digital assets are files that can be downloaded by customers after
+          purchase.
+        </p>
+        <div class="custom-control custom-checkbox mb-3">
+          <%= f.check_box :preferred_limit_digital_download_days,
+                      class: "custom-control-input" %>
+          <%= f.label :preferred_limit_digital_download_days, class: "custom-control-label" %>
+          <%= f.error_message_on :preferred_limit_digital_download_days %>
+        </div>
+        <div class="form-group">
+          <%= f.label :preferred_digital_asset_authorized_days %>
+          <%= f.number_field :preferred_digital_asset_authorized_days,
+                         class: "form-control",
+                         min: 1 %>
+          <%= f.error_message_on :preferred_digital_asset_authorized_days %>
+        </div>
+
+        <div class="custom-control custom-checkbox mb-3">
+          <%= f.check_box :preferred_limit_digital_download_count,
+                      class: "custom-control-input" %>
+          <%= f.label :preferred_limit_digital_download_count, class: "custom-control-label" %>
+          <%= f.error_message_on :preferred_limit_digital_download_count %>
+        </div>
+        <div class="form-group">
+          <%= f.label :preferred_digital_asset_authorized_clicks %>
+          <%= f.number_field :preferred_digital_asset_authorized_clicks,
+                         class: "form-control",
+                         min: 1 %>
+          <%= f.error_message_on :preferred_digital_asset_authorized_clicks %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <%= render "spree/admin/stores/form/custom", f: f %>
 </div>
