--- a/admin/app/views/spree/admin/users/_details.html.erb
+++ b/admin/app/views/spree/admin/users/_details.html.erb
@@ -39,7 +39,7 @@
           </span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          Roles
+          <%= Spree.t(:roles) %>
           <span>
             <% @user.spree_roles.each do |role| %>
               <span class="tag small"><%= role.name %></span>
