Fix removing selects, fix discarding new options

--- a/admin/app/views/spree/admin/products/form/_variants.html.erb
+++ b/admin/app/views/spree/admin/products/form/_variants.html.erb
@@ -80,7 +80,7 @@
                     },
                     select_data: {
                       variants_form_target: "newOptionValuesSelect",
-                      action: "multi-tom-select#handleSelect keydown->multi-tom-select#handleKeyDown keydown.enter->variants-form#handleNewOption:prevent"
+                      action: "multi-tom-select#handleSelect keydown.enter->variants-form#handleNewOption:prevent"
                     } %>
 
                   <%= tom_select_tag "new_option_values[]",
@@ -92,7 +92,7 @@
                     },
                     select_data: {
                       variants_form_target: "newOptionValuesSelect",
-                      action: "multi-tom-select#handleSelect keydown->multi-tom-select#handleKeyDown keydown.enter->variants-form#handleNewOption:prevent"
+                      action: "multi-tom-select#handleSelect keydown.enter->variants-form#handleNewOption:prevent"
                     } %>
                 </div>
               </div>
