--- a/admin/app/views/spree/admin/products/form/variants/_option_template.html.erb
+++ b/admin/app/views/spree/admin/products/form/variants/_option_template.html.erb
@@ -39,7 +39,7 @@
             },
             select_data: {
               variants_form_target: "newOptionValuesSelect",
-              action: "multi-tom-select#handleSelect keydown->multi-tom-select#handleKeyDown keydown.enter->variants-form#handleNewOption:prevent"
+              action: "multi-tom-select#handleSelect keydown.enter->variants-form#handleNewOption:prevent"
             } %>
         </div>
       </div>
