--- a/admin/app/assets/stylesheets/spree/admin/shared/_base.scss
+++ b/admin/app/assets/stylesheets/spree/admin/shared/_base.scss
@@ -761,3 +761,7 @@ div.uppy-Root {
 .rounded-lg {
   border-radius: $border-radius-lg;
 }
+
+.turbo-progress-bar {
+  background-color: theme-color('blue');
+}
