--- a/admin/app/views/spree/admin/page_sections/forms/_image_with_text.html.erb
+++ b/admin/app/views/spree/admin/page_sections/forms/_image_with_text.html.erb
@@ -13,9 +13,9 @@
     <div class="custom-control custom-checkbox pb-2">
       <%= lf.check_box :open_in_new_tab, class: 'custom-control-input', data: { action: 'auto-submit#submit' } %>
       <%= lf.label :open_in_new_tab, class: 'custom-control-label' %>
+      <span class="text-muted form-text mt-2">Clicking on the image will send the user to the selected page/URL</span>
     </div>
   <% end %>
-  <div class="alert alert-info">Clicking on the image will send the user to the selected page/URL</div>
 </div>
 
 <% content_for(:design_tab) do %>
