--- a/admin/app/views/spree/admin/users/edit.html.erb
+++ b/admin/app/views/spree/admin/users/edit.html.erb
@@ -3,6 +3,6 @@
 
   <%= form_for [:admin, @user], as: :user, url: spree.admin_user_path(@user), method: :put do |f| %>
     <%= render 'form', f: f %>
-    <%= render 'spree/admin/shared/edit_resource_links', f: f %>
+    <%= render 'spree/admin/shared/edit_resource_links', f: f, turbo_frame: '_top' %>
   <% end %>
 <% end %>
