Fix disabling option types when editing the product

--- a/admin/app/views/spree/admin/products/form/_variants.html.erb
+++ b/admin/app/views/spree/admin/products/form/_variants.html.erb
@@ -59,7 +59,7 @@
                   include_blank: true,
                   select_data: {
                     variants_form_target: "newOptionNameInput",
-                    action: "variants-form#handleSelectedOptionName"
+                    action: "variants-form#handleSelectedOptionName tomSelectInitialized->variants-form#refreshOptionNameSelect"
                   } %>
                 <% if can?(:manage, Spree::OptionType) %>
                   <p class="form-text text-muted mt-2">
