--- a/admin/app/views/spree/admin/products/form/variants/_option_template.html.erb
+++ b/admin/app/views/spree/admin/products/form/variants/_option_template.html.erb
@@ -24,7 +24,14 @@
     <div class="w-100">
       <div class="form-group">
         <label class="label" for="option_name"><%= Spree.t(:option_name) %></label>
-        <%= tom_select_tag :option_name, multiple: false, create: true, preloaded_options: option_types_for_select, include_blank: true %>
+        <%= tom_select_tag :option_name,
+          multiple: false,
+          create: true,
+          preloaded_options: option_types_for_select,
+          include_blank: true,
+          select_data: {
+            action: "variants-form#handleSelectedOptionName tomSelectInitialized->variants-form#refreshOptionNameSelect"
+          } %>
       </div>
       <div class="form-group">
         <span class="label"><%= Spree.t(:option_values) %></span>
