--- a/admin/app/views/spree/admin/users/_form.html.erb
+++ b/admin/app/views/spree/admin/users/_form.html.erb
@@ -22,6 +22,13 @@
   <%= f.label :tag_list, Spree.t(:tags) %>
   <%= tom_select_tag 'user[tag_list]', multiple: true, class: 'w-100', options: user_tags_json_array, active_option: @user.tag_list, value_field: :name, create: true %>
 </div>
+<div class="form-group">
+  <%= f.label :spree_role_ids, Spree.t(:roles) %>
+  <%= f.select :spree_role_ids,
+          options_from_collection_for_select(Spree::Role.all, 'id', 'name', @user.spree_roles.pluck(:id)),
+          { prompt: false },
+          { multiple: true,  data: { controller: 'autocomplete-select' } } %>          
+</div>
 <div class="custom-control custom-checkbox mb-3">
   <%= f.check_box :accepts_email_marketing, class: 'custom-control-input' %>
   <%= f.label :accepts_email_marketing, Spree.t(:accepts_email_marketing), class: 'custom-control-label' %>
