Checkout with digital products (#12534)
* DRAFT: Checkout with digital products

* Automatically mark shipment as fulfilled after user downloads a digital product

* Allow admin to reset digital links limits

* Normalize translations

* Disable quick checkout for mixed orders

* Update docs

* Fix splitter spec

* Fix order spec

* Fix storefront specs

* Add missing translation

* Fix order's test suppport

* Digital links controller spec

* Fix digital delivery calculator spec

* Show attachments on the order complete screen

* Only the shipping category should decide whether a product is digital or not

* Don't change api route name

* Search digital links only from the current store

--- a/storefront/app/views/themes/default/spree/checkout/complete.html.erb
+++ b/storefront/app/views/themes/default/spree/checkout/complete.html.erb
@@ -8,8 +8,8 @@
 
   <div class="border p-3 rounded-md">
     <h5 class="mb-3 font-semibold pb-3 border-b font-body">
-      <%= Spree.t('storefront.checkout.order_success') %>
-    </h6>
+      <%= Spree.t("storefront.checkout.order_success") %>
+    </h5>
     <p class="mb-0">
       <%= Spree.t('storefront.checkout.order_success_message') %>
     </p>
@@ -57,6 +57,28 @@
         <% end %>
     </div>
   </div>
+
+  <% if @order.digital_links.any? %>
+    <div class="border p-3 rounded-md mt-4">
+      <h5 class="mb-3 font-bold pb-3 border-b font-body"><%= Spree.t(:attachments) %></h5>
+
+      <ul class="flex flex-col gap-2">
+        <% @order.digital_line_items.each do |line_item| %>
+          <li class="flex flex-col gap-1">
+            <span class="font-bold"><%= line_item.product.name %></span>
+            <ul class="flex flex-col gap-1">
+              <% line_item.digital_links.each do |digital_link| %>
+                <li>
+                  <%= link_to "#{Spree.t(:download)} #{digital_link.filename}",
+                  spree.digital_link_path(digital_link.token) %>
+                </li>
+              <% end %>
+            </ul>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 </div>
 
-<%= render_storefront_partials(:checkout_complete_partials) if order_just_completed?%>
+<%= render_storefront_partials(:checkout_complete_partials) if order_just_completed? %>
