--- a/storefront/app/views/themes/default/spree/shared/_order_shipment.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_order_shipment.html.erb
@@ -6,7 +6,8 @@
           <%= Spree.t(:delivery_address) %>
         </div>
         <div class="!leading-[1.375rem] text-neutral-800">
-          <%= render 'spree/shared/address', address: shipment.address || shipment.order.ship_address %>
+          <%= render "spree/shared/address",
+          address: shipment.address || shipment.order.ship_address %>
         </div>
       </div>
       <div class="text-sm lg:w-1/2 lg:flex justify-between">
@@ -18,41 +19,55 @@
             <% if shipment.shipping_method.present? %>
               <%= shipment.shipping_method.name %>
             <% else %>
-              <%= Spree.t('shipment_states.canceled') %>
+              <%= Spree.t("shipment_states.canceled") %>
             <% end %>
-            <br >
+            <br>
             <% if shipment.stock_location.present? %>
-              <%= Spree.t(:shipped_from) %> <%= shipment.stock_location.name %>
+              <%= Spree.t(:shipped_from) %>
+              <%= shipment.stock_location.name %>
             <% end %>
           </div>
         </div>
-        <div class="mt-4 lg:-mt-2 lg:-mr-2">
-        <% if shipment.shipped? && shipment.tracked? && shipment.tracking_url.present? %>
-          <%= link_to Spree.t(:track_items), shipment.tracking_url, class: "!px-3 !py-1 block btn-primary !leading-6 text-sm text-center", target: :_blank %>
-        <% else %>
-          <button class="!px-3 !py-1 block btn-primary !leading-6 text-sm text-center" disabled><%= Spree.t(:track_items) %></button>
+        <% unless shipment.digital? %>
+          <div class="mt-4 lg:-mt-2 lg:-mr-2">
+            <% if shipment.shipped? && shipment.tracked? && shipment.tracking_url.present? %>
+              <%= link_to Spree.t(:track_items),
+              shipment.tracking_url,
+              class: "!px-3 !py-1 block btn-primary !leading-6 text-sm text-center",
+              target: :_blank %>
+            <% else %>
+              <button
+                class="
+                  !px-3 !py-1 block btn-primary !leading-6 text-sm text-center
+                "
+                disabled
+              ><%= Spree.t(:track_items) %></button>
+            <% end %>
+          </div>
         <% end %>
-        </div>
       </div>
     </div>
     <% if shipment.canceled? && shipment.shipped_at.present? %>
       <%# No message if shipment has been shipped already %>
     <% elsif shipment.canceled? && shipment.shipped_at.nil? %>
       <div class="alert-warning text-sm uppercase mt-3 px-3 py-2">
-        <strong><%= Spree.t(:shipment) %> <%= Spree.t('shipment_states.canceled') %></strong>.
+        <strong><%= Spree.t(:shipment) %>
+          <%= Spree.t("shipment_states.canceled") %></strong>.
         <%= Spree.t(:shipment_refunded_message) %>
       </div>
-    <% elsif shipment.shipped? && shipment.tracked? %>
-    <% else %>
+    <% elsif !shipment.digital? %>
       <div class="text-sm uppercase text-center bg-neutral-100 mt-3 px-3 py-2">
         <%= Spree.t(:no_tracking_present) %>
       </div>
     <% end %>
   </div>
 
-  <hr class="border-accent mx-4" >
+  <hr class="border-accent mx-4">
 
   <div class="grid grid-cols-1 gap-4 lg:gap-6 p-4 lg:p-6">
-    <%= render partial: 'spree/shared/order_line_item', collection: shipment.line_items, as: :line_item, cached: spree_base_cache_scope %>
+    <%= render partial: "spree/shared/order_line_item",
+    collection: shipment.inventory_units,
+    as: :inventory_unit,
+    cached: spree_base_cache_scope %>
   </div>
 </li>
