--- a/admin/app/assets/stylesheets/spree/admin/application.scss
+++ b/admin/app/assets/stylesheets/spree/admin/application.scss
@@ -18,6 +18,7 @@
 @import 'components/media_form';
 @import 'components/seo_form';
 @import 'components/line_items_form';
+@import 'components/search_picker';
 
 @import 'plugins/tinymce_custom';
 @import 'plugins/trix_custom';
